flask-python/proiect_db/python/src/gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proiect-db-gateway
spec:
  selector:
    app: proiect-db-gateway
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
